Bug 1110585 - Inconsistent timestamp in storage metadata file; r=bent